fix: issue with jlink missing --add-exports for controlsfx
see https://github.com/beryx/badass-jlink-plugin/issues/26#issuecomment-482294069